# dogger

./: LICENSE  Makefile  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
context/: DEV_TODO.md  architecture.md  decisions.md  project-goal.md  rules.md  todo.md
scripts/: bump.sh  install.sh
src/: App.css  App.tsx  api.ts  highlight.ts  main.tsx  mockData.ts  types.ts  useZoom.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  runner.json  tray.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  docker.rs  lib.rs  main.rs  storage.rs  tray.rs
src/components/: AboutView.tsx  CodebasePathField.tsx  ConfirmDialog.tsx  ContainerField.tsx  DockerWarning.tsx  DoggerMark.tsx  EmptyState.tsx  GenerateTab.tsx  Modal.tsx  NewProjectDialog.tsx  NewTaskDialog.tsx  OutputView.tsx  ProjectConfigEditor.tsx  ProjectView.tsx  PromptDialog.tsx  RunConsole.tsx  RunHistory.tsx  RunStatusBadge.tsx  RunnerWindow.tsx  SettingsView.tsx  TaskDetail.tsx  TaskRow.tsx  Titlebar.tsx  TrayPanel.tsx  ZoomIndicator.tsx
website/: README.md  index.html  script.js  styles.css
